crates/ssa-cache-schema/tests/ui/fail_variant_attr.stderr
error: unsupported cache_schema variant attribute
 --> tests/ui/fail_variant_attr.rs:5:20
  |
5 |     #[cache_schema(version = "v1")]
  |                    ^^^^^^^
