crates/ssa-cache-schema/tests/ui/fail_variant_attr.rs
use ssa_cache_schema::CacheSchema;

#[derive(CacheSchema)]
enum Bad {
    #[cache_schema(version = "v1")]
    Created,
}

fn main() {}
